--- a/deployment.yml
+++ b/deployment.yml
@@ -23,7 +23,7 @@ spec:
     spec: # Pod spec
       containers:
       - name: amazon-container
-        image: barnes/amazon:latest
+        image: barnesrn/amazon:latest
         ports:
         - containerPort: 3000     
         
